Prevent overlay header from covering button bars
When the keyboard was opened and a button bar had position fixed (e.g.
summary in editor), it would get partially covered by overlay header in
some cases.

--- a/less/common/overlays.less
+++ b/less/common/overlays.less
@@ -97,6 +97,7 @@ html[dir="rtl"] {
 		right: 0;
 		border-top: 1px solid #ccc;
 		background-color: #f3f3f3;
+		z-index: 4;
 
 		p {
 			padding: .7em 0;
